--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong> 
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,13 +29,14 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="landing.html">Classes</a></li>
+							<li><a href="generic.html">DAO Workshops</a></li>
+							<li><a href="elements.html">Research</a></li>
+							<li><a href="elements.html">About Us</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="#" class="button primary fit">Workshop Sign Up</a></li>
+							<li><a href="#" class="button fit">Class Sign Up</a></li>
 						</ul>
 					</nav>
 
@@ -43,11 +44,11 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Hi, my name is Forty</h1>
+								<h1>Eola Arts Incubator</h1>
 							</header>
 							<div class="content">
 								<p>Eola Arts Incubator is a co-learning community at the intersection of business and technology. We conduct original research to examine how generative technologies impact organizations and markets.</p>
-								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as generative AI, blockchain, VR, and APIs to create and capture value fore their primary stakeholders.</p>
+								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as generative AI, blockchain, VR, and APIs to create and capture value for their primary stakeholders.</p>
 								
 								<ul class="actions">
 									<li><a href="#one" class="button next scrolly">Get Started</a></li>
@@ -67,8 +68,8 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Aliquam</a></h3>
-										<p>Ipsum dolor sit amet</p>
+										<h3><a href="landing.html" class="link">Class</a></h3>
+										<p>Digital Venturing through Generative AI</p>
 									</header>
 								</article>
 								<article>
@@ -76,8 +77,8 @@
 										<img src="images/pic02.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Tempus</a></h3>
-										<p>feugiat amet tempus</p>
+										<h3><a href="landing.html" class="link">Workshops</a></h3>
+										<p>decentralized autonomous organizations</p>
 									</header>
 								</article>
 								<article>
@@ -85,8 +86,8 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Magna</a></h3>
-										<p>Lorem etiam nullam</p>
+										<h3><a href="landing.html" class="link">About Us</a></h3>
+										<p>Learn more about Eola Arts </p>
 									</header>
 								</article>
 								<article>
@@ -94,11 +95,11 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Ipsum</a></h3>
-										<p>Nisl sed aliquam</p>
+										<h3><a href="landing.html" class="link">Research</a></h3>
+										<p>Learn about research we are involved in</p>
 									</header>
 								</article>
-								<article>
+								<!-- <article>
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
@@ -115,19 +116,22 @@
 										<h3><a href="landing.html" class="link">Etiam</a></h3>
 										<p>Feugiat amet tempus</p>
 									</header>
-								</article>
+								</article> -->
 							</section>
 
 						<!-- Two -->
 							<section id="two">
 								<div class="inner">
 									<header class="major">
-										<h2>Massa libero</h2>
+										<!-- <h2>Massa libero</h2> -->
 									</header>
 									<p>We examine this technology-organization interface as it relates to artful expression, artful organizing, and art markets. These contexts demand that people creatively transformation their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies.</p>
 								<p>Also, these contexts are too much fun to avoid! Why do our work any other way?</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Get Started</a></li>
+										<li><a href="landing.html" class="button next">Workshops Sign UP</a></li>
+									</ul>
+									<ul class="actions">
+										<li><a href="landing.html" class="button next">Class Sign UP</a></li>
 									</ul>
 								</div>
 							</section>
@@ -138,6 +142,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
+								<h3>CONTACT US!</h3>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
@@ -164,14 +169,14 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">ayenda@eolaarts.com</a>
 									</div>
 								</section>
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>407-496-8171</span>
 									</div>
 								</section>
 								<section>
@@ -196,6 +201,7 @@
 								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
 							</ul>
 							<ul class="copyright">
 								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
