added classes.html page with copywriting and banner img

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										<img src="images/pic01.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Class</a></h3>
+										<h3><a href="classes.html" class="link">Class</a></h3>
 										<p>Digital Venturing through Generative AI</p>
 									</header>
 								</article>
@@ -142,7 +142,7 @@
 					<section id="contact">
 						<div class="inner">
 							<section>
-								<h3>CONTACT US!</h3>
+								<h3>CONTACT US</h3>
 								<form method="post" action="#">
 									<div class="fields">
 										<div class="field half">
