digital venturing class page added

--- a/classes.html
+++ b/classes.html
@@ -52,7 +52,7 @@
 								<h1>Classes</h1>
 							</header>
 							<div class="content">
-								<p>Sign up for courses to learn and expand your knowledge on generative AI and how to apply these concepts to real world situations</p>
+								<p>Expand your knowledge with courses that prepare you for real world situations and solutions using generative AI</p>
 							</div>
 						</div>
 					</section>
@@ -82,7 +82,7 @@
 
 												The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
 											<ul class="actions">
-												<li><a href="generic.html" class="button">Learn more</a></li>
+												<li><a href="digital-venturing-ai.html" class="button">Learn more</a></li>
 												<li><a href="generic.html" class="button">Sign Up</a></li>
 											</ul>
 										</div>
