--- a/digital-venturing-ai.html
+++ b/digital-venturing-ai.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>Landing - Forty by HTML5 UP</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -18,124 +18,224 @@
 			<div id="wrapper">
 
 				<!-- Header -->
-					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
-
-				<!-- Menu -->
-					<nav id="menu">
-						<ul class="links">
-							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
-						</ul>
-						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
-						</ul>
+				<!-- Note: The "styleN" class below should match that of the banner element. -->
+				<header id="header" class="alt style2">
+					<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong></a>
+					<nav>
+						<a href="#menu">Menu</a>
 					</nav>
+				</header>
 
-				<!-- Main -->
-					<div id="main" class="alt">
-
-						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h1>Generic</h1>
-									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-								</div>
-							</section>
-
-					</div>
-
-				<!-- Contact -->
-					<section id="contact">
+			<!-- Menu -->
+			<nav id="menu">
+				<ul class="links">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="landing.html">Classes</a></li>
+					<li><a href="generic.html">DAO Workshops</a></li>
+					<li><a href="elements.html">Research</a></li>
+					<li><a href="elements.html">About Us</a></li>
+				</ul>
+				<ul class="actions stacked">
+					<li><a href="#" class="button primary fit">Workshop Sign Up</a></li>
+					<li><a href="#" class="button fit">Class Sign Up</a></li>
+				</ul>
+			</nav>
+				<!-- Banner -->
+				<!-- Note: The "styleN" class below should match that of the header element. -->
+					<section id="banner" class="style1">
 						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
-									</div>
-								</section>
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
+							<span class="image">
+								<img src="images/pic01.jpg" alt="" />
+							</span>
+							<header class="major">
+								<h1>Digital Venturing with Generative AI</h1>
+							</header>
+							<div class="content">
+								<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
+								<ul class="actions">
+									<li><a href="#" class="button primary">Sign Up Now</a></li>
+								</ul>
+							</div>
 						</div>
 					</section>
 
-				<!-- Footer -->
-					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+				<!-- Main -->
+				<div id="main" class="alt">
+						<section class="modulesContainer">
+							<div class="module inner">
+								<header class="minor">
+									<h1>Module 1: Digital Venturing</h1>
+								</header>
+								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+								<ul class="alt">
+									<li>The all digital entrepreneur</li>
+									<li>The all venturing via startup</li>
+									<li>Digital venturing within firms</li>
+								</ul>
+							</div>
+
+							<div class="module inner">
+								<header class="minor">
+									<h1>Module 2: Finding a market and Assessing Advantages</h1>
+								</header>
+								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+								<ul class="alt">
+									<li>Market Fundamentals</li>
+									<li>Unique Advantages or Disadvantages</li>
+									<li>Expected Returns</li>
+								</ul>
+							</div>
+
+							<div class="module inner">
+								<header class="minor">
+									<h1>Module 3: Assessing the Technology</h1>
+								</header>
+								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+								<ul class="alt">
+									<li>Learning the State of the Art</li>
+									<li>Keeping Up (?)</li>
+								</ul>
+							</div>
+
+							<div class="module inner">
+								<header class="minor">
+									<h1>Module 4: Sourcing components</h1>
+								</header>
+								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+								<ul class="alt">
+									<li>Contracting for Models</li>
+									<li>Building and Extending Models Internally</li>
+									<li>Partnering for Custom Models</li>
+									<li>Leveraging Open Source</li>
+									<li>Leveraging APIs</li>
+								</ul>
+							</div>
+
+							<div class="module inner">
+								<header class="minor">
+									<h1>Module 5: Deploying AI-driven Capabilities</h1>
+								</header>
+								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+								<ul class="alt">
+									<li>In a Product</li>
+									<li>As a Product</li>
+								</ul>
+							</div>
+
+							<div class="module inner">
+								<header class="minor">
+									<h1>Module 6: Choosing a Situating Strategy</h1>
+								</header>
+								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+								<ul class="alt">
+									<li>Grounding</li>
+									<li>Bounding</li>
+									<li>Recasting</li>
+								</ul>
+							</div>
+
+							<div class="module inner">
+								<header class="minor">
+									<h1>Module 7: Executing your Situating Strategy</h1>
+								</header>
+								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
+							</div>
+
+
+							<div class="content">
+								<ul class=" module">
+									<li><a href="#" class="button primary">Sign Up Now</a></li>
+								</ul>
+							</div>
+
+						</section>
+
+						
+				</div>
+
+
+			<!-- Contact -->
+			<section id="contact">
+				<div class="inner">
+					<section>
+						<h3>CONTACT US</h3>
+						<form method="post" action="#">
+							<div class="fields">
+								<div class="field half">
+									<label for="name">Name</label>
+									<input type="text" name="name" id="name" />
+								</div>
+								<div class="field half">
+									<label for="email">Email</label>
+									<input type="text" name="email" id="email" />
+								</div>
+								<div class="field">
+									<label for="message">Message</label>
+									<textarea name="message" id="message" rows="6"></textarea>
+								</div>
+							</div>
+							<ul class="actions">
+								<li><input type="submit" value="Send Message" class="primary" /></li>
+								<li><input type="reset" value="Clear" /></li>
 							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-							</ul>
-						</div>
-					</footer>
+						</form>
+					</section>
+					<section class="split">
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-envelope"></span>
+								<h3>Email</h3>
+								<a href="#">ayenda@eolaarts.com</a>
+							</div>
+						</section>
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-phone"></span>
+								<h3>Phone</h3>
+								<span>407-496-8171</span>
+							</div>
+						</section>
+						<section>
+							<div class="contact-method">
+								<span class="icon solid alt fa-home"></span>
+								<h3>Address</h3>
+								<span>1234 Somewhere Road #5432<br />
+								Nashville, TN 00000<br />
+								United States of America</span>
+							</div>
+						</section>
+					</section>
+				</div>
+			</section>
 
-			</div>
+		<!-- Footer -->
+			<footer id="footer">
+				<div class="inner">
+					<ul class="icons">
+						<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+						<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+						<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+						<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+						<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
+					</ul>
+					<ul class="copyright">
+						<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+					</ul>
+				</div>
+			</footer>
 
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrolly.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
+	</div>
 
-	</body>
+
+	<!-- Scripts -->
+		<script src="assets/js/jquery.min.js"></script>
+		<script src="assets/js/jquery.scrolly.min.js"></script>
+		<script src="assets/js/jquery.scrollex.min.js"></script>
+		<script src="assets/js/browser.min.js"></script>
+		<script src="assets/js/breakpoints.min.js"></script>
+		<script src="assets/js/util.js"></script>
+		<script src="assets/js/main.js"></script>
+
+</body>
 </html>
