changes to organization of html files, files related to classes will start with "class-"

--- a/classes.html
+++ b/classes.html
@@ -82,7 +82,7 @@
 
 												The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
 											<ul class="actions">
-												<li><a href="digital-venturing-ai.html" class="button">Learn more</a></li>
+												<li><a href="class-digital-venturing-through-AI.html" class="button">Learn more</a></li>
 												<li><a href="generic.html" class="button">Sign Up</a></li>
 											</ul>
 										</div>
