removed seperate class and workshop sign up in hamburger menu and combined to "sign up now" button

--- a/classes.html
+++ b/classes.html
@@ -36,8 +36,7 @@
 						<li><a href="elements.html">About Us</a></li>
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="#" class="button primary fit">Workshop Sign Up</a></li>
-						<li><a href="#" class="button fit">Class Sign Up</a></li>
+						<li><a href="#" class="button primary fit">Sign Up Now</a></li>
 					</ul>
 				</nav>
 
@@ -83,7 +82,7 @@
 												The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
 											<ul class="actions">
 												<li><a href="class-digital-venturing-through-AI.html" class="button">Learn more</a></li>
-												<li><a href="generic.html" class="button">Sign Up</a></li>
+												<li><a href="sign-up.html" class="button">Sign Up</a></li>
 											</ul>
 										</div>
 									</div>
