--- a/index.html
+++ b/index.html
@@ -35,8 +35,7 @@
 							<li><a href="elements.html">About Us</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Workshop Sign Up</a></li>
-							<li><a href="#" class="button fit">Class Sign Up</a></li>
+							<li><a href="#" class="button primary fit">Sign Up Now</a></li>
 						</ul>
 					</nav>
 
