--- a/sign-up.html
+++ b/sign-up.html
@@ -82,12 +82,12 @@
 									
 											<!-- Break -->
 										<div class="col-12">
-											<textarea name="demo-message" id="demo-message" placeholder="Enter your message" rows="6"></textarea>
+											<textarea name="demo-message" id="demo-message" placeholder="Additional information or questions?" rows="6"></textarea>
 										</div>
 										<!-- Break -->
 										<div class="col-12">
 											<ul class="actions">
-												<li><input type="submit" value="Send Message" class="primary" /></li>
+												<li><input type="submit" value="Sign Up" class="primary" /></li>
 												<li><input type="reset" value="Reset" /></li>
 											</ul>
 										</div>
