added links to classes and sign up page on relevant pages and on hanmburger menu

--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -30,13 +30,13 @@
 			<nav id="menu">
 				<ul class="links">
 					<li><a href="index.html">Home</a></li>
-					<li><a href="landing.html">Classes</a></li>
+					<li><a href="classes.html">Classes</a></li>
 					<li><a href="generic.html">DAO Workshops</a></li>
 					<li><a href="elements.html">Research</a></li>
 					<li><a href="elements.html">About Us</a></li>
 				</ul>
 				<ul class="actions stacked">
-					<li><a href="#" class="button primary fit">Sign Up Now</a></li>
+					<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
 				</ul>
 			</nav>
 				<!-- Banner -->
@@ -52,7 +52,7 @@
 							<div class="content">
 								<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
 								<ul class="actions">
-									<li><a href="#" class="button primary">Sign Up Now</a></li>
+									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
 							</div>
 						</div>
@@ -143,7 +143,7 @@
 
 							<div class="content">
 								<ul class=" module">
-									<li><a href="#" class="button primary">Sign Up Now</a></li>
+									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
 							</div>
 
