--- a/classes.html
+++ b/classes.html
@@ -30,13 +30,13 @@
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
-						<li><a href="landing.html">Classes</a></li>
+						<li><a href="classes.html">Classes</a></li>
 						<li><a href="generic.html">DAO Workshops</a></li>
 						<li><a href="elements.html">Research</a></li>
 						<li><a href="elements.html">About Us</a></li>
 					</ul>
 					<ul class="actions stacked">
-						<li><a href="#" class="button primary fit">Sign Up Now</a></li>
+						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
 					</ul>
 				</nav>
 
