--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Classes</a></li>
+							<li><a href="classes.html">Classes</a></li>
 							<li><a href="generic.html">DAO Workshops</a></li>
 							<li><a href="elements.html">Research</a></li>
 							<li><a href="elements.html">About Us</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Sign Up Now</a></li>
+							<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
 						</ul>
 					</nav>
 
@@ -127,10 +127,7 @@
 									<p>We examine this technology-organization interface as it relates to artful expression, artful organizing, and art markets. These contexts demand that people creatively transformation their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies.</p>
 								<p>Also, these contexts are too much fun to avoid! Why do our work any other way?</p>
 									<ul class="actions">
-										<li><a href="landing.html" class="button next">Workshops Sign UP</a></li>
-									</ul>
-									<ul class="actions">
-										<li><a href="landing.html" class="button next">Class Sign UP</a></li>
+										<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
 									</ul>
 								</div>
 							</section>
