--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -27,18 +27,18 @@
 				</header>
 
 			<!-- Menu -->
-			<nav id="menu">
-				<ul class="links">
-					<li><a href="index.html">Home</a></li>
-					<li><a href="classes.html">Classes</a></li>
-					<li><a href="generic.html">DAO Workshops</a></li>
-					<li><a href="elements.html">Research</a></li>
-					<li><a href="elements.html">About Us</a></li>
-				</ul>
-				<ul class="actions stacked">
-					<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
-				</ul>
-			</nav>
+				<nav id="menu">
+					<ul class="links">
+						<li><a href="index.html">Home</a></li>
+						<li><a href="classes.html">Classes</a></li>
+						<li><a href="workshops.html">DAO Workshops</a></li>
+						<li><a href="about.html">Research</a></li>
+						<li><a href="research.html">About Us</a></li>
+					</ul>
+					<ul class="actions stacked">
+						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
+					</ul>
+				</nav>
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
 					<section id="banner" class="style1">
