--- a/generic.html
+++ b/generic.html
@@ -29,13 +29,13 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="classes.html">Classes</a></li>
+							<li><a href="workshops.html">DAO Workshops</a></li>
+							<li><a href="about.html">Research</a></li>
+							<li><a href="research.html">About Us</a></li>
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
 						</ul>
 					</nav>
 
