--- a/sign-up.html
+++ b/sign-up.html
@@ -30,9 +30,9 @@
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
 						<li><a href="classes.html">Classes</a></li>
-						<li><a href="generic.html">DAO Workshops</a></li>
-						<li><a href="elements.html">Research</a></li>
-						<li><a href="elements.html">About Us</a></li>
+						<li><a href="workshops.html">DAO Workshops</a></li>
+						<li><a href="about.html">Research</a></li>
+						<li><a href="research.html">About Us</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
