--- a/workshops.html
+++ b/workshops.html
@@ -17,16 +17,14 @@
 		<!-- Wrapper -->
 			<div id="wrapper">
 
-				<!-- Header -->
-				<!-- Note: The "styleN" class below should match that of the banner element. -->
-					<header id="header" class="alt style2">
-						<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong></a>
-						<nav>
-							<a href="#menu">Menu</a>
-						</nav>
-					</header>
+				<header id="header" class="alt style2">
+					<a href="index.html" class="logo"><strong>Eola Arts Incubator</strong></a>
+					<nav>
+						<a href="#menu">Menu</a>
+					</nav>
+				</header>
 
-				<!-- Menu -->
+			<!-- Menu -->
 				<nav id="menu">
 					<ul class="links">
 						<li><a href="index.html">Home</a></li>
@@ -42,16 +40,17 @@
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style1">
+					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
-								<img src="images/pic01.jpg" alt="" />
+								<img src="images/pic07.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Classes</h1>
+								<h1>Landing</h1>
 							</header>
 							<div class="content">
-								<p>Expand your knowledge with courses that prepare you for real world situations and solutions using generative AI</p>
+								<p>Lorem ipsum dolor sit amet nullam consequat<br />
+								sed veroeros. tempus adipiscing nulla.</p>
 							</div>
 						</div>
 					</section>
@@ -60,34 +59,34 @@
 					<div id="main">
 
 						<!-- One -->
-							<!-- <section id="one">
+							<section id="one">
 								<div class="inner">
 									<header class="major">
 										<h2>Sed amet aliquam</h2>
 									</header>
 									<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna.</p>
 								</div>
-							</section> -->
+							</section>
 
 						<!-- Two -->
 							<section id="two" class="spotlights">
 								<section>
-									<div class="content classes">
+									<a href="generic.html" class="image">
+										<img src="images/pic08.jpg" alt="" data-position="center center" />
+									</a>
+									<div class="content">
 										<div class="inner">
 											<header class="major">
-												<h3>Class: Digital Venturing through Generative AI</h3>
+												<h3>Orci maecenas</h3>
 											</header>
-											<p>This course uses a co-learning approach, through project-based instruction, to guide students through the the strategy formation process in the realm of generative AI. The course asks students to identify and analyze a market opportunity that uses generative AI in it is core capabilities. Here generative AI must constitute a core part to stakeholders. Each module of the course represents a stage in the strategizing process. But the modules may implemented iteratively through unique sequences, as each project demands.
-
-												The instructor “teaches” by guiding students as they iterate through the seven modules. The final deliverable for the course is a business plan and (or) a business pitch explaining the outcomes of the analysis.</p>
+											<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis magna sed nunc rhoncus condimentum sem. In efficitur ligula tate urna. Maecenas massa sed magna lacinia magna pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis tempus.</p>
 											<ul class="actions">
-												<li><a href="class-digital-venturing-through-AI.html" class="button">Learn more</a></li>
-												<li><a href="sign-up.html" class="button">Sign Up</a></li>
+												<li><a href="generic.html" class="button">Learn more</a></li>
 											</ul>
 										</div>
 									</div>
 								</section>
-								<!-- <section>
+								<section>
 									<a href="generic.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
 									</a>
@@ -118,11 +117,11 @@
 											</ul>
 										</div>
 									</div>
-								</section> -->
+								</section>
 							</section>
 
 						<!-- Three -->
-							<!-- <section id="three">
+							<section id="three">
 								<div class="inner">
 									<header class="major">
 										<h2>Massa libero</h2>
@@ -132,83 +131,80 @@
 										<li><a href="generic.html" class="button next">Get Started</a></li>
 									</ul>
 								</div>
-							</section> -->
+							</section>
 
 					</div>
 
 				<!-- Contact -->
-				<section id="contact">
-					<div class="inner">
-						<section>
-							<h3>CONTACT US</h3>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
-									<li><input type="reset" value="Clear" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split">
+					<section id="contact">
+						<div class="inner">
 							<section>
-								<div class="contact-method">
-									<span class="icon solid alt fa-envelope"></span>
-									<h3>Email</h3>
-									<a href="#">ayenda@eolaarts.com</a>
-								</div>
+								<form method="post" action="#">
+									<div class="fields">
+										<div class="field half">
+											<label for="name">Name</label>
+											<input type="text" name="name" id="name" />
+										</div>
+										<div class="field half">
+											<label for="email">Email</label>
+											<input type="text" name="email" id="email" />
+										</div>
+										<div class="field">
+											<label for="message">Message</label>
+											<textarea name="message" id="message" rows="6"></textarea>
+										</div>
+									</div>
+									<ul class="actions">
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Clear" /></li>
+									</ul>
+								</form>
 							</section>
-							<section>
-								<div class="contact-method">
-									<span class="icon solid alt fa-phone"></span>
-									<h3>Phone</h3>
-									<span>407-496-8171</span>
-								</div>
+							<section class="split">
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-envelope"></span>
+										<h3>Email</h3>
+										<a href="#">information@untitled.tld</a>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-phone"></span>
+										<h3>Phone</h3>
+										<span>(000) 000-0000 x12387</span>
+									</div>
+								</section>
+								<section>
+									<div class="contact-method">
+										<span class="icon solid alt fa-home"></span>
+										<h3>Address</h3>
+										<span>1234 Somewhere Road #5432<br />
+										Nashville, TN 00000<br />
+										United States of America</span>
+									</div>
+								</section>
 							</section>
-							<section>
-								<div class="contact-method">
-									<span class="icon solid alt fa-home"></span>
-									<h3>Address</h3>
-									<span>1234 Somewhere Road #5432<br />
-									Nashville, TN 00000<br />
-									United States of America</span>
-								</div>
-							</section>
-						</section>
-					</div>
-				</section>
+						</div>
+					</section>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<div class="inner">
-						<ul class="icons">
-							<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
-						</ul>
-						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-						</ul>
-					</div>
-				</footer>
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</div>
+					</footer>
 
-		</div>
-
+			</div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
