realigned sign up button at bottom of individual class/workshop pages added modules for "whats new about daos" page

--- a/class-digital-venturing-through-AI.html
+++ b/class-digital-venturing-through-AI.html
@@ -63,7 +63,7 @@
 						<section class="modulesContainer">
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 1: Digital Venturing</h1>
+									<h2>Module 1: Digital Venturing</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -75,7 +75,7 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 2: Finding a market and Assessing Advantages</h1>
+									<h2>Module 2: Finding a market and Assessing Advantages</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -87,7 +87,7 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 3: Assessing the Technology</h1>
+									<h2>Module 3: Assessing the Technology</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -98,7 +98,7 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 4: Sourcing components</h1>
+									<h2>Module 4: Sourcing components</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -112,7 +112,7 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 5: Deploying AI-driven Capabilities</h1>
+									<h2>Module 5: Deploying AI-driven Capabilities</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -123,7 +123,7 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 6: Choosing a Situating Strategy</h1>
+									<h2>Module 6: Choosing a Situating Strategy</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -135,14 +135,14 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 7: Executing your Situating Strategy</h1>
+									<h2>Module 7: Executing your Situating Strategy</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 							</div>
 
 
-							<div class="content">
-								<ul class=" module">
+							<div class="module inner">
+								<ul class=" alt">
 									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
 							</div>
