--- a/workshop-decentralized-cooperation-and-coordination.html
+++ b/workshop-decentralized-cooperation-and-coordination.html
@@ -41,7 +41,7 @@
 				</nav>
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style1">
+					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
 								<img src="images/pic01.jpg" alt="" />
@@ -63,19 +63,14 @@
 						<section class="modulesContainer">
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 1: Digital Venturing</h1>
+									<h2>Module 1: Organizations and Organizing</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-								<ul class="alt">
-									<li>The all digital entrepreneur</li>
-									<li>The all venturing via startup</li>
-									<li>Digital venturing within firms</li>
-								</ul>
 							</div>
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 2: Finding a market and Assessing Advantages</h1>
+									<h2>Module 2: Blockchain Technology  </h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -87,7 +82,7 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 3: Assessing the Technology</h1>
+									<h2>Module 3: Assessing the Technology</h>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -141,8 +136,8 @@
 							</div>
 
 
-							<div class="content">
-								<ul class=" module">
+							<div class="module inner">
+								<ul class=" alt">
 									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
 							</div>
