--- a/workshop-whats-new-about-daos.html
+++ b/workshop-whats-new-about-daos.html
@@ -41,7 +41,7 @@
 				</nav>
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
-					<section id="banner" class="style1">
+					<section id="banner" class="style2">
 						<div class="inner">
 							<span class="image">
 								<img src="images/pic01.jpg" alt="" />
@@ -63,19 +63,14 @@
 						<section class="modulesContainer">
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 1: Digital Venturing</h1>
+									<h2>Module 1: Organizations and Organizing</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-								<ul class="alt">
-									<li>The all digital entrepreneur</li>
-									<li>The all venturing via startup</li>
-									<li>Digital venturing within firms</li>
-								</ul>
 							</div>
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 2: Finding a market and Assessing Advantages</h1>
+									<h2>Module 2: Blockchain Technology</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -87,7 +82,7 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 3: Assessing the Technology</h1>
+									<h2>Module 3: Understanding DAOs as a new (and old)</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
@@ -98,51 +93,14 @@
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 4: Sourcing components</h1>
+									<h2>Organizational Form</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-								<ul class="alt">
-									<li>Contracting for Models</li>
-									<li>Building and Extending Models Internally</li>
-									<li>Partnering for Custom Models</li>
-									<li>Leveraging Open Source</li>
-									<li>Leveraging APIs</li>
-								</ul>
 							</div>
+
 
 							<div class="module inner">
-								<header class="minor">
-									<h1>Module 5: Deploying AI-driven Capabilities</h1>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
-									<li>In a Product</li>
-									<li>As a Product</li>
-								</ul>
-							</div>
-
-							<div class="module inner">
-								<header class="minor">
-									<h1>Module 6: Choosing a Situating Strategy</h1>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-								<ul class="alt">
-									<li>Grounding</li>
-									<li>Bounding</li>
-									<li>Recasting</li>
-								</ul>
-							</div>
-
-							<div class="module inner">
-								<header class="minor">
-									<h1>Module 7: Executing your Situating Strategy</h1>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-							</div>
-
-
-							<div class="content">
-								<ul class=" module">
 									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
 							</div>
