fixed title for  "whats new about daos" page

--- a/workshop-whats-new-about-daos.html
+++ b/workshop-whats-new-about-daos.html
@@ -47,7 +47,7 @@
 								<img src="images/pic01.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Digital Venturing with Generative AI</h1>
+								<h1>What’s new about DAOs?</h1>
 							</header>
 							<div class="content">
 								<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
