completed "workshop decentraloiized cooperation and coordination" page as well as semantic corrections of multiple h1 elements to h2 for each module

--- a/workshop-decentralized-cooperation-and-coordination.html
+++ b/workshop-decentralized-cooperation-and-coordination.html
@@ -47,10 +47,10 @@
 								<img src="images/pic01.jpg" alt="" />
 							</span>
 							<header class="major">
-								<h1>Digital Venturing with Generative AI</h1>
+								<h1>Decentralized Cooperation and Coordination</h1>
 							</header>
 							<div class="content">
-								<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
+								<p>Organizations are technologies for solving cooperation problems (getting people with divergent interest to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
 								<ul class="actions">
 									<li><a href="sign-up.html" class="button primary">Sign Up Now</a></li>
 								</ul>
@@ -63,76 +63,49 @@
 						<section class="modulesContainer">
 							<div class="module inner">
 								<header class="minor">
-									<h2>Module 1: Organizations and Organizing</h2>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-							</div>
-
-							<div class="module inner">
-								<header class="minor">
-									<h2>Module 2: Blockchain Technology  </h2>
+									<h2>Module 1: Managing cooperation problems in centralized and decentralized organizations</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
-									<li>Market Fundamentals</li>
-									<li>Unique Advantages or Disadvantages</li>
-									<li>Expected Returns</li>
+									<li>Public good problems</li>
+									<li>Agency problems</li>
+									<li>Transaction costs</li>
+									<li>Incentive misalignment</li>
 								</ul>
 							</div>
 
 							<div class="module inner">
 								<header class="minor">
-									<h2>Module 3: Assessing the Technology</h>
+									<h2>Module 2: How blockchain resolves cooperation problems</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
-									<li>Learning the State of the Art</li>
-									<li>Keeping Up (?)</li>
+									<li>Tokenomics</li>
+									<li>Incentive Alignment</li>
+									<li>Smart Contracts</li>
 								</ul>
 							</div>
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 4: Sourcing components</h1>
+									<h2>Module 3: Managing coordination problems in centralized and decentralized organizations</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
-									<li>Contracting for Models</li>
-									<li>Building and Extending Models Internally</li>
-									<li>Partnering for Custom Models</li>
-									<li>Leveraging Open Source</li>
-									<li>Leveraging APIs</li>
+									<li>Complex search</li>
+									<li>Knowledge sharing</li>
+									<li>Knowledge creation</li>
 								</ul>
 							</div>
 
 							<div class="module inner">
 								<header class="minor">
-									<h1>Module 5: Deploying AI-driven Capabilities</h1>
+									<h2>Module 4: Can DAOs facilitate knowledge sharing and knowledge creation?</h2>
 								</header>
 								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 								<ul class="alt">
-									<li>In a Product</li>
-									<li>As a Product</li>
+									<li>Decentralized organizational search</li>
 								</ul>
-							</div>
-
-							<div class="module inner">
-								<header class="minor">
-									<h1>Module 6: Choosing a Situating Strategy</h1>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
-								<ul class="alt">
-									<li>Grounding</li>
-									<li>Bounding</li>
-									<li>Recasting</li>
-								</ul>
-							</div>
-
-							<div class="module inner">
-								<header class="minor">
-									<h1>Module 7: Executing your Situating Strategy</h1>
-								</header>
-								<!-- <span class="image main"><img src="images/pic11.jpg" alt="" /></span> -->
 							</div>
 
 
