--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 										<img src="images/pic03.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">About Us</a></h3>
+										<h3><a href="about.html" class="link">About Us</a></h3>
 										<p>Learn more about Eola Arts </p>
 									</header>
 								</article>
