--- a/classes.html
+++ b/classes.html
@@ -32,13 +32,15 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">DAO Workshops</a></li>
-						<li><a href="about.html">Research</a></li>
-						<li><a href="research.html">About Us</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="research.html">Research</a></li>
+						
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
 					</ul>
 				</nav>
+
 
 				<!-- Banner -->
 				<!-- Note: The "styleN" class below should match that of the header element. -->
