created research page with works added, added links to pages whre individual research content will be

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 										<img src="images/pic04.jpg" alt="" />
 									</span>
 									<header class="major">
-										<h3><a href="landing.html" class="link">Research</a></h3>
+										<h3><a href="research.html" class="link">Research</a></h3>
 										<p>Learn about research we are involved in</p>
 									</header>
 								</article>
