--- a/about.html
+++ b/about.html
@@ -34,8 +34,8 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="classes.html">Classes</a></li>
 						<li><a href="workshops.html">DAO Workshops</a></li>
-						<li><a href="about.html">Research</a></li>
-						<li><a href="research.html">About Us</a></li>
+						<li><a href="about.html">About Us</a></li>
+						<li><a href="research.html">Research</a></li>
 					</ul>
 					<ul class="actions stacked">
 						<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
