research-ai-and-generative-music-industry.html page completed

--- a/research-ai-and-generative-music-industry.html
+++ b/research-ai-and-generative-music-industry.html
@@ -40,22 +40,29 @@
 					</nav>
 
 				<!-- Main -->
-					<div id="main" class="alt">
+				<div id="main" class="alt">
 
-						<!-- One -->
-							<section id="one">
-								<div class="inner">
-									<header class="major">
-										<h1>Generic</h1>
-									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+					<!-- One -->
+						<section id="one">
+							<div class="inner fadeIn">
+								<header class="major center">
+									<h2>Business Models for Generative Music</h2>
+									<span>President / Research Lead / Artist in Residence</span>
+								</header>
+								<div class="center">
+									<span class="image"><img class="circle" src="images/virginia-tech" alt="" /></span>
+									<p>Music is at the forefront of research in generative AI. These developments may lower barriers to entry for artists and art entrepreneurs, and offer new opportunities for people to make money from their passions.</p>
+									<p>This idea lead us to initiate a generative music project with the Consulting Group at Virginia Tech. The group investigated new advances in generative music. The market research surveys the technology used to create generative music and offers as examples a few business models used to deploy generative music to the market.</p>
+									<p>The paper lays out potential model specifications and the expected computing costs associated with the recommended project.</p>
+									<p>We encourage readers to critique and extend the work. Please let us know if you find this information useful, or if you need help building something!</p>
+									<p>We have to thank Caleb, Chandler, Vidhi, Aditya, Eli, Marco, Joey. It was great working with you guys.</p>
+									<p>Thank you also to the executive team at CGVT for crafting a unique opportunity for us to work together again. This project was educational and fun. I’m honored.</p>
 								</div>
-							</section>
+								<iframe src="./assets/css/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf" frameborder="0"></iframe>
+							</div>
+						</section>
 
-					</div>
+				</div>
 
 				<!-- Contact -->
 					<section id="contact">
