fixed issue where pdf was not responsive within the iframe

--- a/research-ai-and-generative-music-industry.html
+++ b/research-ai-and-generative-music-industry.html
@@ -58,7 +58,7 @@
 									<p>We have to thank Caleb, Chandler, Vidhi, Aditya, Eli, Marco, Joey. It was great working with you guys.</p>
 									<p>Thank you also to the executive team at CGVT for crafting a unique opportunity for us to work together again. This project was educational and fun. I’m honored.</p>
 								</div>
-								<iframe src="./assets/css/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf" frameborder="0"></iframe>
+								<iframe src="./assets/css/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf#view=fitH" frameborder="0"></iframe>
 							</div>
 						</section>
 
