--- a/research-paper-competitve-advantage-from-ai.html
+++ b/research-paper-competitve-advantage-from-ai.html
@@ -45,7 +45,7 @@
 						<!-- One -->
 							<section id="one">
 								<div class="inner">
-									<iframe src="./assets/css/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf" frameborder="0"></iframe>
+									<iframe src="./assets/css/Kemp-2023Toward-a-Theory-of-Situated-AI.pdf#view=fitH" frameborder="0"></iframe>
 								</div>
 							</section>
 
