--- a/sign-up.html
+++ b/sign-up.html
@@ -70,12 +70,12 @@
 											<p>Please provide some approximate dates that work for you. We will work to schedule you in the closest available offering:</p>
 											<div class="dates">
 												<div class="half">
-													<input type="date" id="date1" name="date2">
-													<input type="date" id="date1" name="date2">
+													<input type="date" id="date1" name="date2" placeholder="mm/dd/yyyy">
+													<input type="date" id="date1" name="date2" placeholder="mm/dd/yyyy">
 												</div>
 												<div class="half">
-													<input type="date" id="date1" name="date2">
-													<input type="date" id="date1" name="date2">
+													<input type="date" id="date1" name="date2" placeholder="mm/dd/yyyy">
+													<input type="date" id="date1" name="date2" placeholder="mm/dd/yyyy">
 												</div>
 												
 											</div>
