new fix for mobile date entry that allows removal of placeholder once date it entered

--- a/sign-up.html
+++ b/sign-up.html
@@ -70,12 +70,12 @@
 											<p>Please provide some approximate dates that work for you. We will work to schedule you in the closest available offering:</p>
 											<div class="dates">
 												<div class="half">
-													<input type="date" placeholder="MY PLACEHOLDER" onchange="this.className=(this.value!=''?'has-value':'')">
-													<input type="date" placeholder="MY PLACEHOLDER" onchange="this.className=(this.value!=''?'has-value':'')">
+													<input type="date" placeholder="mm/dd/yyyy" onchange="this.className=(this.value!=''?'has-value':'')">
+													<input type="date" placeholder="mm/dd/yyyy" onchange="this.className=(this.value!=''?'has-value':'')">
 												</div>
 												<div class="half">
-													<input type="date" placeholder="MY PLACEHOLDER" onchange="this.className=(this.value!=''?'has-value':'')">
-													<input type="date" placeholder="MY PLACEHOLDER" onchange="this.className=(this.value!=''?'has-value':'')">
+													<input type="date" placeholder="mm/dd/yyyy" onchange="this.className=(this.value!=''?'has-value':'')">
+													<input type="date" placeholder="mm/dd/yyyy" onchange="this.className=(this.value!=''?'has-value':'')">
 												</div>
 												
 											</div>
