--- a/classes.html
+++ b/classes.html
@@ -204,7 +204,7 @@
 							<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+							<li>&copy;Eola Arts Incubator</li><li>Design: <a href="">Anthony Saez</a></li><li>Images: <a href="">Unsplash</a></li>
 						</ul>
 					</div>
 				</footer>
