--- a/generic.html
+++ b/generic.html
@@ -121,7 +121,7 @@
 								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 							</ul>
 							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li>&copy;Eola Arts Incubator</li><li>Design: <a href="">Anthony Saez</a></li><li>Images: <a href="">Unsplash</a></li>
 							</ul>
 						</div>
 					</footer>
