changed index html to have social media links where address was and removed them from footer for index

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 								<p>We focus on understanding how both entrepreneurs and existing organizations can leverage technologies such as generative AI, blockchain, VR, and APIs to create and capture value for their primary stakeholders.</p>
 								
 								<ul class="actions">
-									<li><a href="#one" class="button next scrolly">Get Started</a></li>
+									<li><a href="#contact" class="button next scrolly">Contact Us</a></li>
 								</ul>
 							</div>
 							
@@ -178,12 +178,18 @@
 							</section>
 							<section>
 								<div class="contact-method">
-									<span class="icon solid alt fa-home"></span>
-									<h3>Address</h3>
-									<span>1234 Somewhere Road #5432<br />
-									Nashville, TN 00000<br />
-									United States of America</span>
+									<span class="icon solid alt fa-user"></span>
+									<h3>Social Media</h3>
 								</div>
+								<div class="inner">
+									<ul class="icons">
+										<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+										<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
+										<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
+										<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+										<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+										<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
+									</ul>
 							</section>
 						</section>
 					</div>
@@ -192,15 +198,6 @@
 
 				<!-- Footer -->
 					<footer id="footer">
-						<div class="inner">
-							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-								<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
-							</ul>
 							<ul class="copyright">
 								<li>&copy;Eola Arts Incubator</li><li>Design: <a href="">Anthony Saez</a></li><li>Images: <a href="">Unsplash</a></li>
 							</ul>
