--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
 				<!-- Footer -->
 					<footer id="footer">
 							<ul class="copyright">
-								<li>&copy;Eola Arts Incubator</li><li>Design: <a href="">Anthony Saez</a></li><li>Images: <a href="">Unsplash</a></li>
+								<li>&copy;Eola Arts Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 							</ul>
 						</div>
 					</footer>
