--- a/workshops.html
+++ b/workshops.html
@@ -151,59 +151,7 @@
 
 					</div>
 
-				<!-- Contact -->
-				<section id="contact">
-					<div class="inner">
-						<section>
-							<h3>CONTACT US</h3>
-							<form method="post" action="#">
-								<div class="fields">
-									<div class="field half">
-										<label for="name">Name</label>
-										<input type="text" name="name" id="name" />
-									</div>
-									<div class="field half">
-										<label for="email">Email</label>
-										<input type="text" name="email" id="email" />
-									</div>
-									<div class="field">
-										<label for="message">Message</label>
-										<textarea name="message" id="message" rows="6"></textarea>
-									</div>
-								</div>
-								<ul class="actions">
-									<li><input type="submit" value="Send Message" class="primary" /></li>
-									<li><input type="reset" value="Clear" /></li>
-								</ul>
-							</form>
-						</section>
-						<section class="split">
-							<section>
-								<div class="contact-method">
-									<span class="icon solid alt fa-envelope"></span>
-									<h3>Email</h3>
-									<a href="#">ayenda@eolaarts.com</a>
-								</div>
-							</section>
-							<section>
-								<div class="contact-method">
-									<span class="icon solid alt fa-phone"></span>
-									<h3>Phone</h3>
-									<span>407-496-8171</span>
-								</div>
-							</section>
-							<section>
-								<div class="contact-method">
-									<span class="icon solid alt fa-home"></span>
-									<h3>Address</h3>
-									<span>1234 Somewhere Road #5432<br />
-									Nashville, TN 00000<br />
-									United States of America</span>
-								</div>
-							</section>
-						</section>
-					</div>
-				</section>
+				
 
 			<!-- Footer -->
 				<footer id="footer">
@@ -217,7 +165,7 @@
 							<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
 						</ul>
 						<ul class="copyright">
-							<li>&copy;Eola Arts Incubator</li><li>Design: <a href="">Anthony Saez</a></li><li>Images: <a href="">Unsplash</a></li>
+							<li>&copy;Eola Arts Incubator</li><li>Design: <a href="https://anthonysaezportfolio.netlify.app/">Anthony Saez</a></li><li>Images: <a href="https://unsplash.com/">Unsplash</a></li>
 						</ul>
 					</div>
 				</footer>
