adjusted index paragraph and moved to about us intro section. moved all current workshops to classes and adjusted page names to reflect their reclassification

--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
 								<h1>About Us</h1>
 							</header>
 							<div class="content">
-								<p>Meet the minds behind Eola Arts Incubator</p>
+								<p><p>We examine this technology-organization interface as it relates to artful expression, artful organizing, and art markets. These contexts demand that people creatively transform their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies.</p>
 							</div>
 						</div>
 					</section>
