--- a/classes.html
+++ b/classes.html
@@ -89,6 +89,34 @@
 										</div>
 									</div>
 								</section>
+								<section>
+									<div class="content classes">
+										<div class="inner">
+											<header class="major">
+												<h3>Class: What’s new about DAOs?</h3>
+											</header>
+											<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
+											<ul class="actions">
+												<li><a href="class-whats-new-about-daos.html" class="button">Learn more</a></li>
+												<li><a href="sign-up.html" class="button">Sign Up</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
+								<section>
+									<div class="content classes">
+										<div class="inner">
+											<header class="major">
+												<h3>Class: Decentralized Cooperation and Coordination</h3>
+											</header>
+											<p>Organizations are technologies for solving cooperation problems (getting people with divergent interest to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
+											<ul class="actions">
+												<li><a href="class-decentralized-cooperation-and-coordination.html" class="button">Learn more</a></li>
+												<li><a href="sign-up.html" class="button">Sign Up</a></li>
+											</ul>
+										</div>
+									</div>
+								</section>
 								<!-- <section>
 									<a href="generic.html" class="image">
 										<img src="images/pic09.jpg" alt="" data-position="top center" />
