--- a/workshops.html
+++ b/workshops.html
@@ -77,9 +77,9 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Workshop: What’s new about DAOs?</h3>
+												<h3>Workshop: Managing (with) Intelligent Algorithms: Summer Workshop </h3>
 											</header>
-											<p>This workshop surveys 100 years of research on organizational theory as it relates to decentralized organizing. We explain how the old rules of organizing are rewritten on the blockchain, and how some fundamental rules still apply. At the end of this course business leaders should understand how DAOs create value for society as new organizational form.</p>
+											<p>This virtual workshop brings together scholars who are interested in advancing our understanding of how intelligent algorithms shift the nature of work, organizing, and strategy. This is a place to discuss new trends observed in practice and the new research making sense of those trends. Tell us about what you’re reading, what you’re writing, and what makes you excited about new organizational uses of intelligent algorithms. Scholars in all career stages and from all areas of study are invited to participate. </p>
 											<ul class="actions">
 												<li><a href="workshop-whats-new-about-daos.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
@@ -91,9 +91,11 @@
 									<div class="content classes">
 										<div class="inner">
 											<header class="major">
-												<h3>Workshop: Decentralized Cooperation and Coordination</h3>
+												<h3>Workshop: Fall 2023 Monthly Speaker Series: Artificial Intelligence in and Around Organizations</h3>
 											</header>
-											<p>Organizations are technologies for solving cooperation problems (getting people with divergent interest to agree) and coordination problems (getting specialists across thought worlds to combine their inputs effectively).</p>
+											<p>For this monthly speaker series, we invited a few scholars at the intersection of artificial intelligence and organizations to share an early-stage idea or working paper. During each meeting, one scholar will share their work and guide an open conversation about the new questions and implications born from</p>
+											<p>The final speaker list will be released in late summer, after the Academy of Management meetings. Join the guest list to stay informed. </p>
+											<p>*The dates may change based on speaker availability. </p>
 											<ul class="actions">
 												<li><a href="workshop-decentralized-cooperation-and-coordination.html" class="button">Learn more</a></li>
 												<li><a href="sign-up.html" class="button">Sign Up</a></li>
