--- a/index.html
+++ b/index.html
@@ -120,14 +120,11 @@
 							</section>
 
 						<!-- Two -->
-							<section id="two">
+							<section id="two" class="flexCenter">
 								<div class="inner">
-									<header class="major">
-										<!-- <h2>Massa libero</h2> -->
-									</header>
-									<p>We examine this technology-organization interface as it relates to artful expression, artful organizing, and art markets. These contexts demand that people creatively transformation their cognitive, material, social resources in the face of increasingly competitive market forces. These dynamics unfold across the individual, team, organization, and levels. So art offers as a rich context as any other for examining the broader consequences of these generative technologies.</p>
-								<p>Also, these contexts are too much fun to avoid! Why do our work any other way?</p>
-									<ul class="actions">
+										<h2 class="flexCenter">Let's Build Something Great Together</h2>
+								<p>Sign up for one of our classes or workshops right now!</p>
+									<ul class="actions flexCenter">
 										<li><a href="sign-up.html" class="button primary fit">Sign Up Now</a></li>
 									</ul>
 								</div>
@@ -183,10 +180,6 @@
 								</div>
 								<div class="inner">
 									<ul class="icons">
-										<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-										<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-										<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-										<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
 										<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 										<li><a href="#" class="icon brands alt fa-discord"><span class="label">Discord</span></a></li>
 									</ul>
