--- a/sign-up.html
+++ b/sign-up.html
@@ -61,8 +61,8 @@
 											<select name="classSelect" id="ClassSelect">
 												<option value="">- Select a class/workshop -</option>
 												<option value="1">Class: Digital Venturing through Generative AI</option>
-												<option value="1">Workshop: What’s new about DAOS</option>
-												<option value="1">Workshop: Decentralized Cooperation and Coordination</option>
+												<option value="1">Class: What’s new about DAOS</option>
+												<option value="1">Class: Decentralized Cooperation and Coordination</option>
 											</select>
 										</div>
 										<!-- Break -->
